# pyDystopianSunset

./: .containerignore  .cursorrules  .env.example  .gitignore  .windsurfrules  CLAUDE.md  Makefile  README.md  alembic.ini  config.example.toml  docker-compose.yaml  pants.toml  pyproject.toml
.cursor/rules/alembic-migrations/: RULE.md
.cursor/rules/combat-system/: RULE.md
.cursor/rules/discord-extensions/: RULE.md
.cursor/rules/documentation/: RULE.md
.cursor/rules/items-system/: RULE.md
.cursor/rules/models-repositories/: RULE.md
.cursor/rules/project-standards/: RULE.md
.cursor/rules/pydantic/: RULE.md
.cursor/rules/pydantic-ai/: RULE.md
Docker/: Containerfile  prometheus.yml  verify-prometheus.sh
alembic/: README.md  env.py
alembic/versions/: 0d8eb8b7d334_add_gender_to_characters.py  0e7311063b5c_make_gm_history_player_id_nullable.py  195a5d532906_change_discord_id_to_bigint_for_64_bit_.py  20e59196ebcb_add_location_graph_system.py  2cc4c69b7fe8_change_embedding_dimensions_from_1536_.py  4ba90b8ff4a4_fix_datetime_timezone_columns.py  50e9f71cf746_add_last_shutdown_time_to_game_time.py  5ba7bb80a028_add_encounter_rewards_tracking.py  5be26617ec45_add_year_day_cycle_year_and_calendar_.py  626f200cb024_add_items_given_to_character_quests.py  7647b4d2c70_add_game_mechanics_to_game_settings.py  7ced9fef83a3_initial.py  8297afe33eae_add_location_facts_table.py  8297b817c2d1_add_game_time_persistence_interval.py  9bb9deb3daf9_add_rules_reaction_tracking.py  a1b2c3d4e5f6_merge_heads_before_time_fields_removal.py  a26469e6a249_add_calendar_months_and_game_month.py  b2c3d4e5f6a7_remove_duplicated_time_fields_from_game_time.py  be9a604b6be3_add_character_cooldowns.py  cbfd9ede97eb_change_game_session_channel_id_to_.py  e8f9a0b1c2d3_add_memory_system_tables.py  f9a0b1c2d3e4_add_game_time_and_dynamic_world_elements.py
db/: game.sql  game.surql  game.surrealql  memory.surql  nuke.surql
docs/: README.md  api.md  architecture.md  configuration.md  contributing.md  development.md  installation.md  migrations.md  multi-guild-saas-plan.md
docs/design/: game-description.md  leaders.md  location-neotopia.md  memory-system-architecture.md  overview-and-factions.md
scripts/: create_database.py  drop_database.py  manage_embedding_model.py
src/ds_common/: config_bot.py  name_generator.py  roles.py  seed_data.py  strings.py  world_seed_data.py
src/ds_common/combat/: __init__.py  cooldown_service.py  damage_handler.py  display.py  experience_service.py  loot_generator.py  models.py  resource_calculator.py  restoration_service.py
src/ds_common/equipment/: __init__.py  effect_calculator.py  validation.py
src/ds_common/memory/: __init__.py  background_tasks.py  calendar_service.py  cleanup_service.py  embedding_service.py  event_processor.py  game_time_service.py  item_collection_service.py  location_graph_service.py  memory_compressor.py  memory_processor.py  memory_retriever.py  region_service.py  unwind_service.py
src/ds_common/metrics/: __init__.py  service.py
src/ds_common/models/: __init__.py  base_model.py  calendar_event.py  calendar_month.py  calendar_year_cycle.py  character.py  character_class.py  character_cooldown.py  character_recognition.py  character_stat.py  discord_user.py  encounter.py  episode_memory.py  game.py  game_history_embedding.py  game_master.py  game_session.py  game_settings.py  game_time.py  item_category.py  item_template.py  junction_tables.py  location_edge.py  location_fact.py  location_node.py  memory_settings.py  memory_snapshot.py  npc.py  npc_memory.py  player.py  quest.py  record_id_annotation.py  rules_reaction.py  session_memory.py  skill.py  surreal_model.py  world_event.py  world_item.py  world_memory.py  world_region.py
src/ds_common/repository/: base_repository.py  calendar_event.py  (+29 more)
src/ds_discord_bot/: __init__.py  __main__.py  bot.py  dev_runner.py  metrics_server.py  postgres_manager.py  surreal_manager.py
src/ds_npc/: gm.py
tests/: __init__.py
tests/fixtures/: __init__.py  conftest.py
tests/unit/: test_name_generator.py  test_strings.py
(+84 files in other folders)
