[project]
name = "ds-discord-bot"
version = "0.1.0"
description = "Discord bot for Dystopia Sunset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py[voice]>=2.5.2",
    "dotenv>=0.9.9",
    "nats-py>=2.10.0",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.2.6",
    "redis>=6.1.0",
    "surrealdb",
]

[tool.uv.sources]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.py.git" }

[project.scripts]
bot = "ds_discord_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
