[project]
name = "ds-discord-bot"
version = "0.1.0"
description = "Discord bot for Dystopia Sunset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "discord-py[voice]>=2.5.2",
    "dotenv>=0.9.9",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.2.6",
    "surrealdb",
]

[tool.uv.sources]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.py.git" }

[project.scripts]
bot = "ds_discord_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
